2003-10-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm, PkgVersion.pm, VirtPackage.pm: move the system
	  perl stuff from PkgVersion.pm to Services.pm so it can be used
	  by other things (and then use it in VirtPackage.pm to make a
	  system-perl virtual)

2003-10-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm: make sure get_sw_vers() is EXPORT_OK.
	* PkgVersion.pm: make sure we know what the system perl
	  version is on unversioned Type: perl info files.

2003-10-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: handle panther 5.8.1 perl modules properly.

2003-10-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm, SelfUpdate.pm: Further tweaks to the user interface 
	for selfupdate commands.  Also, ensure that the SelfUpdateMethod 
	conf option is properly reset when selfupdate-rsync is invoked.

2003-10-04  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* FinkVersion.pm.in, Selfupdate.pm: Give the user some choice of 
	update method; use a stamp-rsync-live file when using the rsync 
	method.
	
2003-10-02  Rob Braun <bbraun@users.sourceforge.net>

	* SelfUpdate.pm: Add updating of the VERSION file when using
	selfupdate-rsync.

2003-10-01  Rob Braun <bbraun@users.sourceforge.net>

	* SelfUpdate.pm, Engine.pm:  Add selfupdate-rsync option for 
	updating via rsync instead of cvs.

2003-09-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Package.pm: reformat a few fields so that they can have
	carriage returns and such without confusing things

	* Services.pm: cleaned up some rare cases where uninitialized
	values can show up.

2003-09-27  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: don't do update-prebinding on files that are
	actually linking to things in /usr/lib!

2003-09-27  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Services.pm, VirtPackage.pm: Refactored the
	sw_vers code so it can be used for setting